added seats architecture

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -144,13 +144,20 @@
   "DisputeModal.sentTitle": "Dispute report sent",
   "DisputeModal.submit": "Dispute order",
   "DisputeModal.title": "Did something go wrong?",
+  "EditListingAvailabilityPlanForm.seatsPlaceholder": "Select seats...",
+  "EditListingAvailabilityPanel.WeeklyCalendar.available": "Available({seats})",
+  "EditListingAvailabilityExceptionForm.seatsLabel": "Available seats",
+  "EditListingAvailabilityExceptionForm.seatsPlaceholder": "Select available seats...",
+  "BookingDatesForm.seatsTitle": "Choose number of seats",
+  "OrderBreakdown.baseUnitDaySeats": "{unitPrice} x {quantity, number} {quantity, plural, one {day} other {days}} x { seats, number } { seats, plural, one {seat} other {seats} } ",
+  "OrderBreakdown.baseUnitNightSeats": "{unitPrice} x {quantity, number} {quantity, plural, one {night} other {nights}} x { seats, number } { seats, plural, one {seat} other {seats}}",
+  "OrderBreakdown.baseUnitHourSeats": "{unitPrice} x {quantity, number} {quantity, plural, one {hour} other {hours}} x { seats, number } { seats, plural, one {seat} other {seats}}",
   "EditListingAvailabilityExceptionForm.addException": "Save exception",
   "EditListingAvailabilityExceptionForm.available": "Available",
   "EditListingAvailabilityExceptionForm.exceptionEndDateLabel": "Ends",
   "EditListingAvailabilityExceptionForm.exceptionStartDateLabel": "Starts",
   "EditListingAvailabilityExceptionForm.notAvailable": "Not available",
   "EditListingAvailabilityExceptionForm.title": "Add an availability exception",
-  "EditListingAvailabilityPanel.WeeklyCalendar.available": "Available",
   "EditListingAvailabilityPanel.WeeklyCalendar.exceptions": "Exceptions",
   "EditListingAvailabilityPanel.WeeklyCalendar.fetchExceptionsError": "Fetching availability exception data failed",
   "EditListingAvailabilityPanel.WeeklyCalendar.notAvailable": "Not available",
