Fix - Fix booking panel logic

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -151,7 +151,8 @@
   "BookingDatesForm.seatsTitle": "Choose number of seats",
   "OrderBreakdown.baseUnitDaySeats": "{unitPrice} x {quantity, number} {quantity, plural, one {day} other {days}} x { seats, number } { seats, plural, one {seat} other {seats} } ",
   "OrderBreakdown.baseUnitNightSeats": "{unitPrice} x {quantity, number} {quantity, plural, one {night} other {nights}} x { seats, number } { seats, plural, one {seat} other {seats}}",
-  "OrderBreakdown.baseUnitHourSeats": "{unitPrice} x {quantity, number} {quantity, plural, one {hour} other {hours}} x { seats, number } { seats, plural, one {seat} other {seats}}",
+  "OrderBreakdown.baseUnitHourSeats": "{unitPrice} x {quantity, number} {quantity, plural, one {} other {hours}} x { seats, number } { seats, plural, one {seat} other {seats}}",
+  "OrderBreakdown.baseUnitQuantitySeats": "{unitPrice} x { seats, number } { seats, plural, one {seat} other {seats}}",
   "EditListingAvailabilityExceptionForm.addException": "Save exception",
   "EditListingAvailabilityExceptionForm.available": "Available",
   "EditListingAvailabilityExceptionForm.exceptionEndDateLabel": "Ends",
@@ -326,6 +327,8 @@
   "EmailVerificationPage.title": "Verify your email address",
   "FieldBoolean.no": "No",
   "FieldBoolean.yes": "Yes",
+  "FieldDateAndTimeInput.guestNameLabel": "Guest name #{number}",
+  "FieldDateAndTimeInput.guestNamePlaceholder": "Guest#{number}",
   "FieldDateAndTimeInput.endTime": "End time",
   "FieldDateAndTimeInput.startTime": "Start time",
   "FieldDateInput.screenReaderInputMessage": "Date input",
@@ -496,8 +499,8 @@
   "NotFoundPage.title": "Page not found",
   "OrderBreakdown.baseUnitDay": "{unitPrice} x {quantity, number} {quantity, plural, one {day} other {days}}",
   "OrderBreakdown.baseUnitNight": "{unitPrice} x {quantity, number} {quantity, plural, one {night} other {nights}}",
-  "OrderBreakdown.baseUnitHour": "{unitPrice} x {quantity, number} {quantity, plural, one {hour} other {hours}}",
-  "OrderBreakdown.baseUnitQuantity": "{quantity, plural, one {Unit price} other {{unitPrice} x #}}",
+  "OrderBreakdown.baseUnitHour": "{unitPrice} x {quantity, number} {quantity, plural, one {} other {hours}}",
+  "OrderBreakdown.baseUnitQuantity": "{unitPrice}",
   "OrderBreakdown.bookingEnd": "Booking end",
   "OrderBreakdown.bookingStart": "Booking start",
   "OrderBreakdown.commission": "{role, select, customer {{marketplaceName} fee *} provider {{marketplaceName} fee *} other {}}",
